Bug 154957 - Cropped area transparency lost on right of image
Summary: Cropped area transparency lost on right of image
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.0.0 beta1+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.3.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Image-Crop
  Show dependency treegraph
 
Reported: 2023-04-21 16:15 UTC by Stéphane Guillou (stragu)
Modified: 2023-05-03 10:08 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
example ODP with cropped crops (4.08 MB, application/vnd.oasis.opendocument.presentation)
2023-04-21 16:19 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stéphane Guillou (stragu) 2023-04-21 16:15:18 UTC
Steps:
1. Open Impress or Calc
2. Insert > Image (PNG or JPG)
3. On image, Context menu > Crop
4. Crop from the right hand side

Results:
No transparency of cropped area on the right. Works from top, left and bottom.

In recent master build:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cd9de202765e243e41416802f3e4486b8a96f16
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Also affects gen VCL, and macOS.

Bibisected with linux-64-7.5 repository to first bad commit 2eed02c3c2f74fd4de5c3b3e2cbb1c1633b2cdb1 which points to core commit:

commit ee0d5e7bb8614c50e71dd074b8440f412eb62ff3
author	Caolán McNamara <caolanm@redhat.com>	Thu Oct 13 10:53:52 2022 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Thu Oct 13 14:52:32 2022 +0200
use OutputDevice clipping if its just a set of rectangles
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/141286

Caolán, can you please have a look?
Comment 1 Stéphane Guillou (stragu) 2023-04-21 16:19:59 UTC
Created attachment 186844 [details]
example ODP with cropped crops

1. Open file
2. Right-click > Crop
Comment 2 Caolán McNamara 2023-04-21 19:35:00 UTC
Seeing as it was an optimization attempt I'll just revert it, but the same happens if I turn off tools, options, view, use anti-aliasing  (and close and reopen the doc) and that precedes my effort.
Comment 3 Commit Notification 2023-04-22 20:34:46 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0ad8d644722228759abce42b0c11024e7460f6eb

tdf#154957 Revert "use OutputDevice clipping if its just a set of rectangles"

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2023-04-22 20:39:02 UTC
undone in trunk, backport to 7.5 in gerrit
Comment 5 Commit Notification 2023-04-24 08:03:01 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/380292e48f5971aeba8ed3bae8bf2fae432916e4

tdf#154957 Revert "use OutputDevice clipping if its just a set of rectangles"

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-04-26 11:06:56 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5-3":

https://git.libreoffice.org/core/commit/3c453c9123d5cd1e3532edcd052864fdd4ce196a

tdf#154957 Revert "use OutputDevice clipping if its just a set of rectangles"

It will be available in 7.5.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.