tdf#154957 Revert "use OutputDevice clipping if its just a set of rectangles"

it was an attempt at an optimization, but if it doesn't work just revert it.

The non-antialias case also doesn't work so the reverted commit
wasn't itself the problem but the existing path has some flaw I'm not
going to invest in figuring out.

This reverts commit ee0d5e7bb8614c50e71dd074b8440f412eb62ff3.

Change-Id: I8d4f126e3bfe135d39a085f28cea6708ae8f833f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150777
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>